--- a/Apps/APN-UIKit/APN UIKit/Info.plist
+++ b/Apps/APN-UIKit/APN UIKit/Info.plist
@@ -2,9 +2,11 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>CFBundleDisplayName</key>
-	<string>Native iOS</string>
-	<key>CFBundleURLTypes</key>
+    <key>CFBundleDisplayName</key>
+    <string>Native iOS</string>
+    <key>UIUserInterfaceStyle</key>
+    <string>Light</string>
+    <key>CFBundleURLTypes</key>
 	<array>
 		<dict>
 			<key>CFBundleTypeRole</key>
