--- a/.github/workflows/build-sample-apps.yml
+++ b/.github/workflows/build-sample-apps.yml
@@ -27,7 +27,7 @@ jobs:
       comment-id: ${{ steps.create-comment.outputs.comment-id }}
     steps:
       - name: Find existing PR comment
-        uses: peter-evans/find-comment@v3
+        uses: peter-evans/find-comment@3eae4d37986fb5a8592848f6a574fdf654e61f9e # v3.1.0
         id: existing-comment
         with:
           issue-number: ${{ github.event.pull_request.number }}
@@ -35,7 +35,7 @@ jobs:
           body-includes: <!-- sample app builds -->
 
       - name: Create or update comment
-        uses: peter-evans/create-or-update-comment@v4
+        uses: peter-evans/create-or-update-comment@71345be0265236311c031f5c7866368bd1eff043 # v4.0.0
         id: create-comment
         with:
           comment-id: ${{ steps.existing-comment.outputs.comment-id }}
@@ -83,7 +83,7 @@ jobs:
 
       - name: Find existing "SDK size reports" comment
         if: github.event_name == 'pull_request'
-        uses: peter-evans/find-comment@v3
+        uses: peter-evans/find-comment@3eae4d37986fb5a8592848f6a574fdf654e61f9e # v3.1.0
         id: find-sdk-size-report-comment
         with:
           issue-number: ${{ github.event.pull_request.number }}
@@ -92,7 +92,7 @@ jobs:
 
       - name: Send SDK size reports to the PR
         if: github.event_name == 'pull_request'
-        uses: peter-evans/create-or-update-comment@v4
+        uses: peter-evans/create-or-update-comment@71345be0265236311c031f5c7866368bd1eff043 # v4.0.0
         with:
           comment-id: ${{ steps.find-sdk-size-report-comment.outputs.comment-id }}
           issue-number: ${{ github.event.pull_request.number }}
