--- a/.github/workflows/deploy-sdk.yml
+++ b/.github/workflows/deploy-sdk.yml
@@ -47,8 +47,8 @@ jobs:
       # CLI to replace strings in files. The CLI recommends using `cargo install` which is slow. This Action is fast because it downloads pre-built binaries.
       # If using sd on macos, "brew install" works great. for Linux, this is the recommended way.
       - name: Install sd CLI to use later in the workflow
-        # uses: kenji-miyake/setup-sd@v1
-        uses: levibostian/setup-sd@add-file-extension # Using fork until upstream Action has bug fixed in it.
+        # uses: kenji-miyake/setup-sd@59a1bd7bba077f6c491f04cd9d24b524ea2db4b6 # v1.1.1
+        uses: levibostian/setup-sd@cbdeed93d4fe03f9e36b73bb6d9e7c3c4805e1f9 # add-file-extension # Using fork until upstream Action has bug fixed in it.
 
       # We want to track the SDK binary size for each release. 
       # The reports is pushed by semantic-release action below by including files listed in the `assets` array in the `.releaserc` file.
@@ -74,7 +74,7 @@ jobs:
       # 2. Updates metadata files. Such as updating the version number in package.json and adding entries to CHANGELOG.md file.
       # 3. Create git tag and push it to github.
       - name: Deploy git tag via semantic-release
-        uses: cycjimmy/semantic-release-action@v4
+        uses: cycjimmy/semantic-release-action@0a51e81a6baff2acad3ee88f4121c589c73d0f0e # v4.2.0
         id: semantic-release
         with:
           # version numbers below can be in many forms: M, M.m, M.m.p
@@ -90,7 +90,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Notify team of git tag being created
-        uses: slackapi/slack-github-action@v1.26.0
+        uses: slackapi/slack-github-action@70cd7be8e40a46e8b0eced40b0de447bdb42f68e # v1.26.0
         if: steps.semantic-release.outputs.new_release_published == 'true' # only run if a git tag was made.
         with:
           # Use block kit for format of the JSON payloads: https://app.slack.com/block-kit-builder
@@ -127,7 +127,7 @@ jobs:
           SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
 
       - name: Send Velocity Deployment
-        uses: codeclimate/velocity-deploy-action@v1.0.0
+        uses: codeclimate/velocity-deploy-action@1b4a22f0db113bf8d85c14fd726cf0ec6d17cd13 # v1.0.0
         if: steps.semantic-release.outputs.new_release_published == 'true' # only run if a git tag was made.
         with:
           token: ${{ secrets.VELOCITY_DEPLOYMENT_TOKEN }}
@@ -135,7 +135,7 @@ jobs:
           environment: production
 
       - name: Notify team of failure
-        uses: slackapi/slack-github-action@v1.26.0
+        uses: slackapi/slack-github-action@70cd7be8e40a46e8b0eced40b0de447bdb42f68e # v1.26.0
         if: ${{ failure() }} # only run this if any previous step failed
         with:
           # Use block kit for format of the JSON payloads: https://app.slack.com/block-kit-builder
@@ -216,7 +216,7 @@ jobs:
         run: ./scripts/push-cocoapod.sh CustomerIO.podspec
 
       - name: Notify team of successful deployment
-        uses: slackapi/slack-github-action@v1.26.0
+        uses: slackapi/slack-github-action@70cd7be8e40a46e8b0eced40b0de447bdb42f68e # v1.26.0
         if: ${{ success() }}
         with:
           # Use block kit for format of the JSON payloads: https://app.slack.com/block-kit-builder
@@ -253,7 +253,7 @@ jobs:
           SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
 
       - name: Notify team of failure
-        uses: slackapi/slack-github-action@v1.26.0
+        uses: slackapi/slack-github-action@70cd7be8e40a46e8b0eced40b0de447bdb42f68e # v1.26.0
         if: ${{ failure() }} # only run this if any previous step failed
         with:
           # Use block kit for format of the JSON payloads: https://app.slack.com/block-kit-builder
