chore: Trigger sample apps public builds after deployment is done (#878)

--- a/.github/workflows/build-sample-apps.yml
+++ b/.github/workflows/build-sample-apps.yml
@@ -11,6 +11,7 @@ on:
         type: boolean
         required: false
         default: false
+  workflow_call:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
