--- a/.github/workflows/deploy-sdk.yml
+++ b/.github/workflows/deploy-sdk.yml
@@ -184,6 +184,15 @@ jobs:
         with:
           ref: ${{ inputs.existing-git-tag }}
 
+      - name: Get SDK version
+        id: get-version
+        run: |
+          if [[ "${{ needs.deploy-git-tag.outputs.new_release_published }}" == "true" ]]; then
+            echo "version=${{ needs.deploy-git-tag.outputs.new_release_version }}" >> $GITHUB_OUTPUT
+          else
+            echo "version=${{ inputs.existing-git-tag }}" >> $GITHUB_OUTPUT
+          fi
+
       - uses: ./.github/actions/setup-ios
 
       - name: Install cocoapods
@@ -233,7 +242,7 @@ jobs:
                       "type": "section",
                       "text": {
                           "type": "mrkdwn",
-                          "text": "*Version ${{ github.event.release.tag_name }}*\n\niOS SDK deployment progress:\n ~1. <https://github.com/${{github.repository}}/releases/tag/${{ github.event.release.tag_name }}|create git tag and deploy to Swift Package Manager>~\n~2. deploy to cocoapods~\n\nBecause it's hard to automatically verify cocoapods get deployed, it's recommended to manually verify if cocoapods got deployed successfully by checking for cococapods emails or https://github.com/cocoaPods/specs to see if new commit was added for the release."
+                          "text": "*Version ${{ steps.get-version.outputs.version }}*\n\niOS SDK deployment progress:\n ~1. <https://github.com/${{github.repository}}/releases/tag/${{ steps.get-version.outputs.version }}|create git tag and deploy to Swift Package Manager>~\n~2. deploy to cocoapods~\n\nBuilding sample apps with latest SDK version will begin automatically."
                       }
                   }
               ]
@@ -280,3 +289,35 @@ jobs:
           # Help on how to get the webhook URL: https://github.com/marketplace/actions/slack-send#setup-2
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_NOTIFY_RELEASES_WEBHOOK_URL }}
           SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
+
+  wait-for-cocoapods:
+    name: Wait for deploy-cocoapods to finish
+    needs: [deploy-cocoapods]
+    runs-on: ubuntu-latest
+    if: ${{ success() }}
+    steps:
+      - name: Wait for CocoaPods CDN propagation
+        run: |
+          echo "Waiting for CocoaPods CDN to propagate..."
+          sleep 1200 # Wait for 20 minute to allow CocoaPods CDN to propagate the changes.
+          echo "CocoaPods CDN propagation completed."
+
+  # New job to build sample apps after successful deployment to CocoaPods
+  build-sample-apps:
+    name: Build sample apps with latest SDK version
+    needs: [deploy-cocoapods, wait-for-cocoapods]
+    if: ${{ success() }}
+    uses: ./.github/workflows/reusable_build_sample_apps.yml
+    with:
+      use_latest_sdk_version: true
+    secrets:
+      GOOGLE_CLOUD_MATCH_READONLY_SERVICE_ACCOUNT_B64: ${{ secrets.GOOGLE_CLOUD_MATCH_READONLY_SERVICE_ACCOUNT_B64 }}
+      FIREBASE_APP_DISTRIBUTION_SERVICE_ACCOUNT_CREDS_B64: ${{ secrets.FIREBASE_APP_DISTRIBUTION_SERVICE_ACCOUNT_CREDS_B64 }}
+      CUSTOMERIO_APN_WORKSPACE_SITE_ID: ${{ secrets.CUSTOMERIO_APN_WORKSPACE_SITE_ID }}
+      CUSTOMERIO_APN_WORKSPACE_CDP_API_KEY: ${{ secrets.CUSTOMERIO_APN_WORKSPACE_CDP_API_KEY }}
+      CUSTOMERIO_FCM_WORKSPACE_SITE_ID: ${{ secrets.CUSTOMERIO_FCM_WORKSPACE_SITE_ID }}
+      CUSTOMERIO_FCM_WORKSPACE_CDP_API_KEY: ${{ secrets.CUSTOMERIO_FCM_WORKSPACE_CDP_API_KEY }}
+      SAMPLE_APPS_APN_FIREBASE_APP_ID: ${{ secrets.SAMPLE_APPS_APN_FIREBASE_APP_ID }}
+      SAMPLE_APPS_FCM_FIREBASE_APP_ID: ${{ secrets.SAMPLE_APPS_FCM_FIREBASE_APP_ID }}
+      SAMPLE_APPS_INSTRUCTIONS_GUIDE_LINK: ${{ secrets.SAMPLE_APPS_INSTRUCTIONS_GUIDE_LINK }}
+      SLACK_NOTIFY_RELEASES_WEBHOOK_URL: ${{ secrets.SLACK_NOTIFY_RELEASES_WEBHOOK_URL }}
